--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@ h1 {
   text-align: center;
   color: white;
 }
-.mainButton, input {
+.mainButton, .confirmUploadButton, input {
   background-color: Transparent;
   border-radius: 10%;
   border: 5px solid white;
@@ -29,8 +29,8 @@ h1 {
   left: 30%;
 }
 
-input + label {
-  color: red;
+input {
+  width: 60%;
 }
 
 .trackList {
