--- a/public/cassette.css
+++ b/public/cassette.css
@@ -1,4 +1,7 @@
 
+#cassette {
+  display: block;
+}
 .intro{
   width:100%;
   height:30px;
@@ -28,9 +31,9 @@
 
 *{margin:0;padding:0;box-sizing:border-box;}
 
-body{
+/*body{
   background:pink;
-}
+}*/
 
 .mixtape{
   width:350px;
@@ -161,7 +164,7 @@ body{
 .roll-1{
   width:35px;
   height:35px;
-  background:pink;
+  background:transparent;
   border-radius:50%;
   float:left;
   margin-top:10px;
@@ -215,7 +218,7 @@ body{
 .roll-2{
   width:35px;
   height:35px;
-  background:pink;
+  background:transparent;
   border-radius:50%;
   float:right;
   margin-top:10px;
